--- a/src/main/java/MainTab.form
+++ b/src/main/java/MainTab.form
@@ -15,7 +15,7 @@
         <properties/>
         <border type="line"/>
         <children>
-          <component id="988dc" class="javax.swing.JLabel">
+          <component id="988dc" class="javax.swing.JLabel" binding="requetsPathLabel">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
               <gridbag weightx="0.0" weighty="1.0"/>
@@ -24,7 +24,7 @@
               <text value="Request"/>
             </properties>
           </component>
-          <component id="53651" class="javax.swing.JLabel">
+          <component id="53651" class="javax.swing.JLabel" binding="responsePathLabel">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
               <gridbag weightx="0.0" weighty="0.0"/>
@@ -61,6 +61,24 @@
               <text value="Force interception of in scope"/>
             </properties>
           </component>
+          <component id="83b73" class="javax.swing.JButton" binding="RequestFileButton">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties>
+              <text value="Select request script"/>
+            </properties>
+          </component>
+          <component id="ca501" class="javax.swing.JButton" binding="selectResponseScriptButton" default-binding="true">
+            <constraints>
+              <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties>
+              <text value="Select response script"/>
+            </properties>
+          </component>
         </children>
       </grid>
       <vspacer id="48552">
@@ -85,7 +103,9 @@
             <children>
               <component id="804d3" class="javax.swing.JList" binding="scopeList">
                 <constraints/>
-                <properties/>
+                <properties>
+                  <minimumSize width="0" height="400"/>
+                </properties>
               </component>
             </children>
           </scrollpane>
