--- a/src/main/java/MainTab.form
+++ b/src/main/java/MainTab.form
@@ -39,6 +39,7 @@
               <gridbag weightx="0.0" weighty="1.0"/>
             </constraints>
             <properties>
+              <selected value="true"/>
               <text value="Request"/>
             </properties>
           </component>
@@ -48,10 +49,11 @@
               <gridbag weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties>
+              <selected value="true"/>
               <text value="Response"/>
             </properties>
           </component>
-          <component id="4fdc8" class="javax.swing.JCheckBox" binding="interceptionScopeCheckBox">
+          <component id="4fdc8" class="javax.swing.JCheckBox" binding="forceInterceptInScope">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
               <gridbag weightx="0.0" weighty="0.0"/>
