--- a/src/main/java/MainTab.form
+++ b/src/main/java/MainTab.form
@@ -169,7 +169,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="2479e" class="javax.swing.JButton" binding="deleteSelectedButton" default-binding="true">
+              <component id="2479e" class="javax.swing.JButton" binding="deleteSelectedScopeButton">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -187,7 +187,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="bb5f6" class="javax.swing.JButton" binding="deleteSelectedButton1" default-binding="true">
+              <component id="bb5f6" class="javax.swing.JButton" binding="deleteSelectedBlacklistButton">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -205,7 +205,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="fb594" class="javax.swing.JButton" binding="deleteSelectedButton2" default-binding="true">
+              <component id="fb594" class="javax.swing.JButton" binding="deleteSelectedForceButton">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
