store current settings

--- a/src/main/java/MainTab.form
+++ b/src/main/java/MainTab.form
@@ -371,7 +371,7 @@
                   <text value="Response"/>
                 </properties>
               </component>
-              <component id="4fdc8" class="javax.swing.JCheckBox" binding="forceInterceptInScope">
+              <component id="4fdc8" class="javax.swing.JCheckBox" binding="forceInterceptInScopeCheckbox">
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                   <gridbag weightx="0.0" weighty="0.0"/>
