--- a/src/main/java/MainTab.form
+++ b/src/main/java/MainTab.form
@@ -118,7 +118,7 @@
           </grid>
         </children>
       </grid>
-      <grid id="76466" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="76466" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -168,34 +168,42 @@
               </component>
               <component id="79974" class="javax.swing.JButton" binding="chooseNodeBinaryButto">
                 <constraints>
-                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                    <maximum-size width="200" height="-1"/>
+                  </grid>
                 </constraints>
                 <properties>
-                  <text value="Choose binary"/>
+                  <text value="Select binary"/>
                 </properties>
               </component>
               <component id="b9f98" class="javax.swing.JButton" binding="choosePythonBinaryButton">
                 <constraints>
-                  <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                    <maximum-size width="200" height="-1"/>
+                  </grid>
                 </constraints>
                 <properties>
-                  <text value="Choose binary"/>
+                  <text value="Select binary"/>
                 </properties>
               </component>
               <component id="b5136" class="javax.swing.JButton" binding="setNodeDefaultButton">
                 <constraints>
-                  <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                    <maximum-size width="200" height="-1"/>
+                  </grid>
                 </constraints>
                 <properties>
-                  <text value="Use systems"/>
+                  <text value="Reset"/>
                 </properties>
               </component>
               <component id="81d93" class="javax.swing.JButton" binding="setPythonDefaultButton">
                 <constraints>
-                  <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                    <maximum-size width="200" height="-1"/>
+                  </grid>
                 </constraints>
                 <properties>
-                  <text value="Use systems"/>
+                  <text value="Reset"/>
                 </properties>
               </component>
             </children>
@@ -242,22 +250,31 @@
               </component>
               <component id="8c672" class="javax.swing.JButton" binding="chooseNodeGlobalBinaryButton">
                 <constraints>
-                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                    <maximum-size width="200" height="-1"/>
+                  </grid>
                 </constraints>
                 <properties>
-                  <text value="Choose binary"/>
+                  <text value="Select binary"/>
                 </properties>
               </component>
               <component id="3d6fd" class="javax.swing.JButton" binding="choosePythonGlobalBinaryButton">
                 <constraints>
-                  <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                    <maximum-size width="200" height="-1"/>
+                  </grid>
                 </constraints>
                 <properties>
-                  <text value="Choose binary"/>
+                  <text value="Select binary"/>
                 </properties>
               </component>
             </children>
           </grid>
+          <hspacer id="9feb4">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </hspacer>
         </children>
       </grid>
       <grid id="2bcd2" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
