--- a/src/main/java/EditorTab.form
+++ b/src/main/java/EditorTab.form
@@ -70,7 +70,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-16777216"/>
+              <background color="-39373"/>
               <font style="1"/>
               <foreground color="-1"/>
               <text value="Test decryption"/>
@@ -81,7 +81,7 @@
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-2258668"/>
+              <background color="-39373"/>
               <font style="1"/>
               <foreground color="-1"/>
               <text value="Test encryption"/>
